objects/Antra_Employee__c.object
<CustomObject>
    <label>Antra Employee</label>
    <nameField>
        <displayFormat>AEM-{000}</displayFormat>
        <label>Antra Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Antra Employees</pluralLabel>
    <sharingModel>Read</sharingModel>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <formula>IF( ISPICKVAL( Salutation__c , &apos;Mr.&apos;) , &apos;Male&apos;, &apos;Female&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gender</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Street_1_Address__c +&apos;,&apos;+ Street_2_address__c + &apos;,&apos;+City__c +&apos;,&apos;+ State__c +&apos;,&apos;+ Area_Pin_code__c</formula>
        <label>Address:</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_name__c</fullName>
        <label>First name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sick_Leaves__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Sick Leaves</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_Pin_code__c</fullName>
        <label>Area Pin code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department ID</label>
        <referenceTo>Antra_Department__c</referenceTo>
        <relationshipLabel>Antra Employees</relationshipLabel>
        <relationshipName>Antra_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <formula>Department_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_salary__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Employee salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Employee_status__c</fullName>
        <label>Employee status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Mail_Id__c</fullName>
        <label>Employee Mail Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Mnager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Mnager</label>
        <referenceTo>Antra_Employee__c</referenceTo>
        <relationshipLabel>Antra Employees</relationshipLabel>
        <relationshipName>Antra_Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Street_1_Address__c</fullName>
        <label>Street 1 Address:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_2_address__c</fullName>
        <label>Street 2 address:</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sick_Leaves_Taken__c</fullName>
        <label>Sick Leaves Taken</label>
        <summarizedField>Antra_Employee_Leaves__c.leave_duration__c</summarizedField>
        <summaryFilterItems>
            <field>Antra_Employee_Leaves__c.Leave_Reason__c</field>
            <operation>equals</operation>
            <value>Sick</value>
        </summaryFilterItems>
        <summaryForeignKey>Antra_Employee_Leaves__c.Employee_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Board_Mail_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Board Mail Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Casual_Leaves_Taken__c</fullName>
        <label>Casual Leaves Taken</label>
        <summarizedField>Antra_Employee_Leaves__c.leave_duration__c</summarizedField>
        <summaryFilterItems>
            <field>Antra_Employee_Leaves__c.Leave_Type__c</field>
            <operation>equals</operation>
            <value>casual leave</value>
        </summaryFilterItems>
        <summaryForeignKey>Antra_Employee_Leaves__c.Employee_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Earned_Leaves_Taken__c</fullName>
        <label>Earned Leaves Taken</label>
        <summarizedField>Antra_Employee_Leaves__c.leave_duration__c</summarizedField>
        <summaryFilterItems>
            <field>Antra_Employee_Leaves__c.Leave_Type__c</field>
            <operation>equals</operation>
            <value>earned leave</value>
        </summaryFilterItems>
        <summaryForeignKey>Antra_Employee_Leaves__c.Employee_ID__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Casual_Leave_Allotted__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Casual Leave Allotted</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earned_Leaves_Remaing__c</fullName>
        <formula>Earned_Leaves_Allotted__c - Earned_Leaves_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earned Leaves Remaing</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sick_Leaves_Remaining__c</fullName>
        <formula>Sick_Leaves__c - Sick_Leaves_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sick Leaves Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Earned_Leaves_Allotted__c</fullName>
        <defaultValue>15</defaultValue>
        <label>Earned Leaves Allotted</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employee_Mobile_number__c</fullName>
        <label>Employee Mobile number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Casual_Leaves_Remaining__c</fullName>
        <formula>Casual_Leave_Allotted__c - Casual_Leaves_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Casual Leaves Remaining</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mail_Unsubscription_Status__c</fullName>
        <defaultValue>&apos;subscribed&apos;</defaultValue>
        <inlineHelpText>true means Employee Unsubscribed</inlineHelpText>
        <label>Mail Unsubscription Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>